--- a/hw21720/mailboxApp/style.css
+++ b/hw21720/mailboxApp/style.css
@@ -1,10 +1,10 @@
 html,
 body {
 	height: 100%;
+	background-color: rgb(165, 142, 14);
 }
 
 body {
-	background-color: rgb(165, 142, 14);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -20,4 +20,12 @@ td {
 
 td {
 	/* max-width: 70px; */
+}
+
+.prompt2header {
+	font-weight: bold;
+}
+
+p {
+	text-align: center;
 }
