fixed scoreboard issue, increased round number threshold, optimized for multiplayer, but not syncing up with dom

--- a/rockPaperHW31220/style.css
+++ b/rockPaperHW31220/style.css
@@ -10,8 +10,7 @@ body {
 #content,
 #bottom-half,
 #round-results,
-#player1-score,
-#player2-score {
+.player-score-container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
