--- a/toDoApp/style.css
+++ b/toDoApp/style.css
@@ -1,29 +1,71 @@
 main {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 header {
-    border-bottom: 1px solid black;
-    background-color: beige;
+	text-align: center;
+	border-bottom: 1px solid black;
+	background-color: beige;
+}
+
+header div {
+	height: 100%;
+	margin: auto 0;
 }
 
 #task-adder {
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-    margin: 10%;
+	width: 60%;
+	display: flex;
+	flex-direction: column;
+	margin: 10%;
+	align-items: center;
 }
 
 #caption_input {
-    width: 100%;
-    display: flex;
-    /* flex-direction: row; */
+	width: 100%;
+	display: inline-flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+}
+
+#caption-input h3 {
+	margin-left: 30px;
+}
+
+#task-to-add {
+	height: 30px;
+	width: 130px;
+	border-radius: 10px;
+	outline: none;
+}
+
+#task-add-button {
+	border-radius: 20px;
+	height: 40px;
+	width: 50%;
+	outline: none;
+}
+
+#task-add-button:active {
+	background-color: rgb(4, 109, 194);
+}
+
+#list-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 #task-list {
-    list-style: none;
+	list-style: none;
+}
+
+.minus-button {
+	margin-right: 8px;
+	outline: none;
 }
