--- a/rockPaperHW31220/style.css
+++ b/rockPaperHW31220/style.css
@@ -10,7 +10,7 @@ body {
 #content,
 #bottom-half,
 #round-results,
-.player-score-container {
+.player-score-container, .scoreboardindvscores {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -43,6 +43,8 @@ body {
 	display: flex;
 	justify-content: space-evenly;
 }
+
+
 
 #round-results {
 	font-size: 1rem;
