--- a/rockPaperHW31220/style.css
+++ b/rockPaperHW31220/style.css
@@ -10,7 +10,8 @@ body {
 #content,
 #bottom-half,
 #round-results,
-.player-score-container, .scoreboardindvscores {
+.player-score-container,
+.scoreboardindvscores {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -43,8 +44,6 @@ body {
 	display: flex;
 	justify-content: space-evenly;
 }
-
-
 
 #round-results {
 	font-size: 1rem;
