--- a/ajaxex/ex2/style.css
+++ b/ajaxex/ex2/style.css
@@ -18,6 +18,7 @@ header, main {
 }
 
 main {
+    margin-top: 5rem;
     height: 40%;
     justify-content: space-evenly;
 }
@@ -28,4 +29,8 @@ form div {
 
 input {
     outline: none;
+}
+
+li {
+    cursor: pointer;
 }
